After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 669627 - [PATCH] Fix compile warnings
[PATCH] Fix compile warnings
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: shell
git master
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-02-08 02:52 UTC by Robert Ancell
Modified: 2012-02-08 12:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix compile warnings (1.51 KB, patch)
2012-02-08 02:52 UTC, Robert Ancell
committed Details | Review

Description Robert Ancell 2012-02-08 02:52:46 UTC
Created attachment 207050 [details] [review]
Fix compile warnings

Fix the following compile warnings:
make[1]: Entering directory `/home/bob/git/gnome-control-center/shell'
  CC     control-center.o
control-center.c:60:3: warning: missing initializer [-Wmissing-field-initializers]
control-center.c:60:3: warning: (near initialization for ‘all_options[7].short_name’) [-Wmissing-field-initializers]
  CC     cc-shell-log.o
  CC     gnome-control-center.o
  CC     shell-search-renderer.o
  CC     cc-shell-category-view.o
  CC     cc-shell-item-view.o
  CC     cc-shell-model.o
  CC     cc-editable-entry.o
  CC     cc-panel.o
  CC     cc-shell.o
cc-shell.c: In function ‘cc_shell_embed_widget_in_header’:
cc-shell.c:253:7: warning: ‘return’ with a value, in function returning void [enabled by default]
  CC     cc-shell-marshal.o
  CCLD   gnome-control-center
make[1]: Leaving directory `/home/bob/git/gnome-control-center/shell'