shell: Fix compile warnings

https://bugzilla.gnome.org/show_bug.cgi?id=669627